--- a/src/components/fanPump/fanPump.css
+++ b/src/components/fanPump/fanPump.css
@@ -1,8 +1,8 @@
 .fanPump{
-    width: 30%;
+    width:fit-content;
     display: flex;
     flex-direction: column;
-    flex: 2;
+    flex: 1;
     margin: 20px 20px 20px;
     padding: 20px;
     border-radius: 5px;
@@ -24,11 +24,13 @@
 .switchTitle{
     font-size: 28px;
     font-weight: 600;
+    text-align: left;
 }
 
 .fanPumpSwitch{
     display: flex;
-    justify-content:end;
+    margin-left: 60px;
+    justify-content:space-between;
 }
 
 
