--- a/src/components/fanPump/fanPump.css
+++ b/src/components/fanPump/fanPump.css
@@ -1,8 +1,8 @@
 .fanPump{
-    width:fit-content;
+    width:100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    flex: 1;
     margin: 20px 20px 20px;
     padding: 20px;
     border-radius: 5px;
@@ -18,18 +18,18 @@
     justify-content:space-between;
     text-align: left;
     margin-top: 5px;
-    padding: 10px;
+    padding: 5px;
 }
 
 .switchTitle{
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 600;
     text-align: left;
 }
 
 .fanPumpSwitch{
     display: flex;
-    margin-left: 60px;
+    margin-left: 50px;
     justify-content:space-between;
 }
 
