--- a/src/components/StartEndBtn/startEndBtn.css
+++ b/src/components/StartEndBtn/startEndBtn.css
@@ -1,4 +1,14 @@
 .startEndBtn{
     flex:5;
-    align-self:center;
+    
+
+}
+
+.startEndBtnContainer{
+
+    flex:1;
+    align-self: center;
+    justify-content: center;
+    margin: 20px;
+
 }
