--- a/src/components/InputWidget/inputWidget.css
+++ b/src/components/InputWidget/inputWidget.css
@@ -14,18 +14,7 @@
     margin: 20px 20px 20px 20px;
 
 }
-.inputFlowRate{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-between;
-    margin-top: 10px;
-    margin-bottom: 30px;
-}
-.inputFlowRate>label{
-    margin-bottom: 5px;
-    font-size: 20px;
-    font-weight: 600;
-}
+
 
 .inputItem{
     display: flex;
@@ -61,4 +50,41 @@
     font-weight: 600;
     font-size: 16px;
 
+}
+
+.resisInfoItem{
+    
+    flex: 1;
+    margin: 20px 20px 20px;
+    padding: 25px;
+    border-radius: 5px;
+    justify-content: space-around;
+}
+
+.resisInfoTitle{
+    font-size: 28px;
+}
+
+.resisInfoIconTemp{
+    margin-left: 5px;
+    font-size: 30px;
+    color:crimson;
+}
+
+.resisInfocontainer{
+    margin: 10px 0px;
+    display: flex;
+    align-items: center;
+}
+
+.resisInfoResistance{
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.resisInfo{
+    flex:1;
+    width:100%;
+    display: flex;
+    justify-content: space-between;
 }
