--- a/src/components/ReadingsWidget/readingsWidget.css
+++ b/src/components/ReadingsWidget/readingsWidget.css
@@ -1,5 +1,6 @@
-.inputWidget{
-    flex:1;
+.ReadingsWidget{
+    flex:2;
+    flex-direction: column;
     margin: 20px 20px 20px;
     padding: 10px;
     border-radius: 5px;
@@ -9,8 +10,9 @@
 }
 .inputform{
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex:2;
+    justify-content:space-between;
+    
     margin: 20px 20px 20px 20px;
 
 }
