--- a/src/components/ReadingsWidget/readingsWidget.css
+++ b/src/components/ReadingsWidget/readingsWidget.css
@@ -1,8 +1,8 @@
 .ReadingsWidget{
-    flex:2;
+    flex:1;
     flex-direction: column;
     margin: 20px 20px 20px;
-    padding: 10px;
+    padding: 20px;
     border-radius: 5px;
     -webkit-box-shadow: 5px 5px 20px 5px rgba(217,217,217,1);
     -moz-box-shadow: 5px 5px 20px 5px rgba(217,217,217,1);
@@ -41,14 +41,14 @@
 
 .setValuesBtn{
     
-    align-self: last baseline;
+    align-self:center;
     margin-top: 20px;
     width: fit-content;
     border-radius: 5px;
     border: none;
     padding: 10px;
     cursor: pointer;
-    background-color: rgb(202, 169, 233);
+    background-color: rgb(208, 185, 230);
     font-weight: 600;
     font-size: 16px;
 
