--- a/src/components/InputControl/inputControl.css
+++ b/src/components/InputControl/inputControl.css
@@ -1,6 +1,6 @@
 .inputControl{
     width:100%;
-    flex: 2;
+    flex: 1.5;
     display: flex;
     flex-direction: column;
     margin: 20px 20px 20px;
@@ -51,8 +51,8 @@
     margin: 20px 20px 20px 20px;
 
 }
-.h1 {
-    font-size: medium;
+.inputControl>h1 {
+    font-size: 24px;
     text-align:center;
 }
 
