--- a/src/pages/Analytics/analytics.css
+++ b/src/pages/Analytics/analytics.css
@@ -2,3 +2,17 @@
     flex:5;
     padding: 20px;
 }
+
+.graphs{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.graphs>h1{
+
+    display: flex;
+    text-align: center;
+}
